feat: add a See More button to show the end of the post that has been cut off (if it was too long)

--- a/src/app/social-network/components/post/post.component.scss
+++ b/src/app/social-network/components/post/post.component.scss
@@ -9,3 +9,11 @@
         justify-content: space-between;
     }
 }
+
+.see-more-button {
+    font-weight: 500;
+    &:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+}
