--- a/src/app/social-network/components/post/post.component.html
+++ b/src/app/social-network/components/post/post.component.html
@@ -22,7 +22,8 @@
     </mat-card-header>    
     <mat-card-content>
         <img mat-card-image *ngIf="post.imageUrl as imageUrl" [src]="imageUrl" [alt]="post.text">
-        <span class="post-content">{{ post.text | shorten: 100 }}</span>
+        <div class="post-content">{{ shortenText ? (post.text | shorten: SHORTEN_TEXT_SIZE) : post.text }}</div>
+        <span class="see-more-button" (click)="onSeeMoreButtonClicked()" *ngIf="shortenButton">{{ shortenText ? "Voir plus" : "Voir moins" }}</span>
     </mat-card-content>
     <!-- <mat-card-actions>
         <app-comments [comments]="post.comments" (newComment)="onNewComment($event)"></app-comments>
