--- a/src/app/social-network/components/post/post.component.html
+++ b/src/app/social-network/components/post/post.component.html
@@ -21,7 +21,7 @@
         </mat-menu>
     </mat-card-header>    
     <mat-card-content>
-        <img mat-card-image *ngIf="post.imageUrl as imageUrl" [src]="imageUrl" [alt]="post.text">
+        <img mat-card-image *ngIf="post.imageUrl as imageUrl" [src]="imageUrl" [alt]="post.imageAlt ? post.imageAlt : 'Image du post'">
         <!-- use innerText attribute to display correctly special characters (like \n or \r) -->
         <div class="post-content" [innerText]="shortenText ? (post.text | shorten: SHORTEN_TEXT_SIZE) : post.text"></div>
         <span class="see-more-button" (click)="onSeeMoreButtonClicked()" *ngIf="shortenButton">{{ shortenText ? "Voir plus" : "Voir moins" }}</span>
