--- a/src/app/social-network/components/post/post.component.html
+++ b/src/app/social-network/components/post/post.component.html
@@ -7,7 +7,7 @@
             <span>{{ post.createdAt | timeAgo }}</span>
             <span *ngIf="hasBeenEdited"> (dernière modification : {{ post.updatedAt | timeAgo }})</span>
         </mat-card-subtitle>
-        <button mat-icon-button *ngIf="canEditAndDelete" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <button mat-icon-button *ngIf="post.canEditAndDelete" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
             <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
