feat: add comments management (very simple UI for now)

--- a/src/app/social-network/components/post/post.component.html
+++ b/src/app/social-network/components/post/post.component.html
@@ -29,7 +29,7 @@
         <span class="see-more-button" *ngIf="seeMoreButton" (click)="showComplete()">Voir plus</span>
         <span class="see-less-button" *ngIf="seeMore" (click)="showTruncated()">Voir moins</span>
     </mat-card-content>
-    <!-- <mat-card-actions>
+    <mat-card-actions>
         <app-comments [comments]="post.comments" (newComment)="onNewComment($event)"></app-comments>
-    </mat-card-actions> -->
+    </mat-card-actions>
 </mat-card>
