--- a/src/app/social-network/components/post-list/post-list.component.html
+++ b/src/app/social-network/components/post-list/post-list.component.html
@@ -1,2 +1,2 @@
 <p>post-list works!</p>
-<app-post *ngFor="let post of posts$ | async" [post]="post"></app-post>
+<app-post *ngFor="let post of posts$ | async" [post]="post" (postCommented)="onPostCommented($event)"></app-post>
