--- a/src/app/social-network/components/post-unitary/post-unitary.component.html
+++ b/src/app/social-network/components/post-unitary/post-unitary.component.html
@@ -1,1 +1,1 @@
-<app-post *ngIf="post$ | async as post" [post]="post"></app-post>
+<app-post *ngIf="post$ | async as post" [post]="post" (postCommented)="onPostCommented($event)"></app-post>
