--- a/src/app/social-network/components/post/post.component.html
+++ b/src/app/social-network/components/post/post.component.html
@@ -31,7 +31,7 @@
     </mat-card-content>
     <mat-card-actions>
         <div class="actions-bar">
-            <button class="comments-button" mat-flat-button>{{post.comments.length + " commentaires"}}</button>
+            <button class="comments-button" mat-flat-button *ngIf="hasSomeComment">{{hasSeveralComments ? (post.comments.length + " commentaires") : "1 commentaire"}}</button>
             <div class="likes">
                 <p>{{post.likesNumber ? post.likesNumber : 0}}</p>
                 <button class="like-button" mat-icon-button (click)="onLike()" [attr.aria-label]="post.userLiked ? 'Button to unlike the post' : 'Button to like the post'">
