--- a/src/app/social-network/components/comments/comments.component.html
+++ b/src/app/social-network/components/comments/comments.component.html
@@ -17,3 +17,4 @@
         <span class="comment-date" mat-line>{{ comment.createdAt | timeAgo }}</span>
     </mat-list-item>
 </mat-list>
+<button class="load-more-button" *ngIf="!noMoreCommentToLoad" mat-flat-button color="accent" (click)="loadMore()" aria-label="Button to load more comments">Afficher plus ...</button>
