--- a/src/app/social-network/components/post/post.component.html
+++ b/src/app/social-network/components/post/post.component.html
@@ -31,7 +31,7 @@
     </mat-card-content>
     <mat-card-actions>
         <div class="actions-bar">
-            <button class="comments-button" mat-flat-button *ngIf="hasSomeComment">{{hasSeveralComments ? (post.comments.length + " commentaires") : "1 commentaire"}}</button>
+            <button class="comments-button" mat-flat-button *ngIf="hasSomeComment">{{hasSeveralComments ? (post._count.comments + " commentaires") : "1 commentaire"}}</button>
             <div class="likes">
                 <p>{{post.likesNumber ? post.likesNumber : 0}}</p>
                 <button class="like-button" mat-icon-button (click)="onLike()" [attr.aria-label]="post.userLiked ? 'Button to unlike the post' : 'Button to like the post'">
@@ -39,6 +39,6 @@
                 </button>
             </div>
         </div>
-        <app-comments [comments]="post.comments" (newComment)="onNewComment($event)"></app-comments>
+        <app-comments [comments]="post.comments" [noMoreCommentToLoad]="noMoreCommentToLoad" (newComment)="onNewComment($event)" (loadMoreComments)="onloadMoreComments()"></app-comments>
     </mat-card-actions>
 </mat-card>
