--- a/src/app/social-network/components/post/post.component.html
+++ b/src/app/social-network/components/post/post.component.html
@@ -31,7 +31,9 @@
     </mat-card-content>
     <mat-card-actions>
         <div class="actions-bar">
-            <button class="comments-button" mat-flat-button *ngIf="hasSomeComment">{{hasSeveralComments ? (post._count.comments + " commentaires") : "1 commentaire"}}</button>
+            <button class="comments-button" mat-flat-button *ngIf="post._count.comments ? (post._count.comments !== 0) : false">
+                {{(post._count.comments > 1) ? (post._count.comments + " commentaires") : "1 commentaire"}}
+            </button>
             <div class="likes">
                 <p>{{post.likesNumber ? post.likesNumber : 0}}</p>
                 <button class="like-button" mat-icon-button (click)="onLike()" [attr.aria-label]="post.userLiked ? 'Button to unlike the post' : 'Button to like the post'">
