feat: add a loading spinner when loading more comments

--- a/src/app/social-network/components/post/post.component.html
+++ b/src/app/social-network/components/post/post.component.html
@@ -41,6 +41,11 @@
                 </button>
             </div>
         </div>
-        <app-comments [comments]="post.comments" [showComments]="showComments" [noMoreCommentToLoad]="noMoreCommentToLoad" (newComment)="onNewComment($event)" (loadMoreComments)="onloadMoreComments()"></app-comments>
+        <app-comments [comments]="post.comments"
+            [showComments]="showComments"
+            [loading]="commentsLoading"
+            [noMoreCommentToLoad]="noMoreCommentToLoad"
+            (newComment)="onNewComment($event)"
+            (loadMoreComments)="onloadMoreComments()"></app-comments>
     </mat-card-actions>
 </mat-card>
