--- a/src/app/social-network/components/comments/comments.component.html
+++ b/src/app/social-network/components/comments/comments.component.html
@@ -7,6 +7,7 @@
     </button>
 </div>
 <div *ngIf="showComments">
+    <mat-spinner *ngIf="loading"></mat-spinner>
     <mat-list *ngIf="comments.length" @list>
         <mat-list-item *ngFor="let comment of comments; let i = index"
                 [@listItem]="animationStates[i]"
@@ -17,5 +18,5 @@
             <span class="comment-date" mat-line>{{ comment.createdAt | timeAgo }}</span>
         </mat-list-item>
     </mat-list>
-    <button class="load-more-button" *ngIf="!noMoreCommentToLoad" mat-flat-button color="accent" (click)="loadMore()" aria-label="Button to load more comments">Afficher plus ...</button>
+    <button class="load-more-button" *ngIf="!noMoreCommentToLoad && !loading" mat-flat-button color="accent" (click)="loadMore()" aria-label="Button to load more comments">Afficher plus ...</button>
 </div>
