feat: add button to open post (in full page)

--- a/src/app/social-network/components/post-unitary/post-unitary.component.html
+++ b/src/app/social-network/components/post-unitary/post-unitary.component.html
@@ -1,4 +1,4 @@
-<app-post *ngIf="post" [post]="post"
+<app-post *ngIf="post" [post]="post" [isUnitaryPost]="true"
     (postCommented)="onPostCommented($event)"
     (postLiked)="onPostLiked($event)"
     (loadComments)="onLoadComments($event)"
