--- a/src/app/social-network/components/post-list/post-list.component.html
+++ b/src/app/social-network/components/post-list/post-list.component.html
@@ -1,6 +1,7 @@
-<app-post *ngFor="let post of postsList" [post]="post"
+<app-post *ngFor="let post of postsList" [post]="post" [isUnitaryPost]="false"
     (postCommented)="onPostCommented($event)"
     (postLiked)="onPostLiked($event)"
     (loadComments)="onLoadComments($event)"
+    (openPost)="onOpenPost($event)"
     [commentsListChanged$]="commentsListChangedSubject.asObservable()"></app-post>
 <button class="load-more-button" *ngIf="!noMorePostToLoad" mat-flat-button color="accent" (click)="loadMore()" aria-label="Button to load more posts">+ Afficher plus</button>
