feat: add infinite scrolling for posts list

--- a/src/app/social-network/components/post-list/post-list.component.html
+++ b/src/app/social-network/components/post-list/post-list.component.html
@@ -1,7 +1,10 @@
-<app-post *ngFor="let post of postsList" [post]="post" [isUnitaryPost]="false"
-    (postCommented)="onPostCommented($event)"
-    (postLiked)="onPostLiked($event)"
-    (loadComments)="onLoadComments($event)"
-    (openPost)="onOpenPost($event)"
-    [commentsListChanged$]="commentsListChangedSubject.asObservable()"></app-post>
-<button class="load-more-button" *ngIf="!noMorePostToLoad" mat-flat-button color="accent" (click)="loadMore()" aria-label="Button to load more posts">+ Afficher plus</button>
+<div infinite-scroll [infiniteScrollDistance]="infiniteScrollDistance" (scrolled)="onScrollDown()">
+    <app-post *ngFor="let post of postsList" [post]="post" [isUnitaryPost]="false"
+        (postCommented)="onPostCommented($event)"
+        (postLiked)="onPostLiked($event)"
+        (loadComments)="onLoadComments($event)"
+        (openPost)="onOpenPost($event)"
+        [commentsListChanged$]="commentsListChangedSubject.asObservable()"></app-post>
+    <mat-spinner *ngIf="postsLoading"></mat-spinner>
+    <!-- <button class="load-more-button" *ngIf="!noMorePostToLoad" mat-flat-button color="accent" (click)="loadMore()" aria-label="Button to load more posts">+ Afficher plus</button> -->
+</div>
