--- a/src/app/social-network/components/comments/comments.component.scss
+++ b/src/app/social-network/components/comments/comments.component.scss
@@ -9,3 +9,18 @@
 mat-form-field {
     width: 90%;
 }
+
+.comments-component mat-list-item {
+    & .comment-author {
+        font-size: 18px;
+        margin-right: 10px;
+        font-weight: 500;
+    }
+    & .comment-date {
+        font-size: 14px;
+        font-style: italic;
+    }
+    & .comment-text {
+        font-size: 16px;
+    }
+}
