--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-wrapper">
+<div class="login-wrapper auth-form">
     <mat-card [formGroup]="mainForm" class="main-form">
         <mat-card-title class="form-title">Connexion</mat-card-title>
         <div class="form-row">
