--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -1,14 +1,23 @@
-.auth-form {
+@use '@angular/material' as mat;
+@import "src/_material-theme.scss";
+
+.form {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .mat-card-container {
+        width: 100%;
+    }
     
     .main-form {
+        box-sizing: border-box;
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
-        margin: 20px auto;
+        margin: 20px auto 0px auto;
+        padding-inline: 5%;
         padding-bottom: 30px;
         position: relative;
     }
@@ -17,10 +26,18 @@
         margin-bottom: 25px;
     }
     
+    .form-group {
+        width: 100%;
+    }
+    
     .form-row {
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
-        align-items: center;
+        width: 100%;
+    }
+
+    mat-form-field {
         width: 100%;
     }
     
